--- a/CSS/sem_3_bidniituhai.css
+++ b/CSS/sem_3_bidniituhai.css
@@ -56,6 +56,28 @@ nav ul li a:hover {
     color: #fff;
 }
 
+header.header-image {
+    background: url('../sem3-images/home3.jpg') center center/cover no-repeat;
+    height: 70vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+header.header-image .overlay {
+    color: #fff;
+    background: rgba(0, 0, 0, 0.5);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1rem;
+}
+
 .text-jijig {
     font-size: 2rem;
     color: #ac7e68;
@@ -66,7 +88,7 @@ h1 {
     color: #fffbf2;
 }
 
-header.header-image {
+header.header-image p {
     font-size: 1rem;
     max-width: 600px;
     margin-top: 1rem;
