--- a/CSS/sem_3_bidniituhai.css
+++ b/CSS/sem_3_bidniituhai.css
@@ -145,3 +145,55 @@ h3 .num {
     font-weight: bold;
     font-size: 1.8rem;
 }
+
+@media screen and (max-width: 768px) {
+
+    header.header-image {
+        height: 85vh;
+    }
+
+    h1 {
+        font-size: 2.3rem;
+        line-height: 1.2;
+    }
+
+    .text-jijig {
+        font-size: 0.9rem;
+        margin-bottom: 0.5rem;
+    }
+
+    nav {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 1rem 0;
+    }
+
+    nav h3 {
+        margin-bottom: 0.5rem;
+        font-size: 1.2rem;
+    }
+
+    nav ul {
+        flex-direction: row;
+        justify-content: center;
+        gap: 0.8rem;
+    }
+
+    nav ul li a {
+        padding: 0.3rem 0.4rem;
+        font-size: 0.85rem;
+    }
+
+    section {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .sec1_img img {
+        width: 80%;
+        margin: auto;
+        padding: 1rem;
+    }
+}
